# splitsen

./: .gitignore  README.md
examples/: CMakeCache.txt  CMakeCommon.cmake  CMakeLists.txt  common.cmake
examples/html_clients/: admin_dashboard.html  echo_client.html  index.html  json_client.html  json_client_multiprotocol.html  splice.psd
examples/json_server/: CMakeLists.txt  main.cpp  my_server.cpp  my_server.hpp  my_session.cpp  my_session.hpp  protocol_messages.hpp
examples/mono_protocol_echo/echo_client/: CMakeLists.txt  client.cpp
examples/mono_protocol_echo/echo_server/: CMakeLists.txt  server.cpp
examples/mono_protocol_echo/echo_ws_server/: CMakeLists.txt  ws_server.cpp
examples/multi_protocol_echo/raw_client/: CMakeLists.txt  raw_client.cpp
examples/multi_protocol_echo/serialize_client/: CMakeLists.txt  serialize_client.cpp
examples/multi_protocol_echo/server/: CMakeLists.txt  echo_message.cpp  echo_message.hpp  main.cpp  my_http_session.hpp  my_log_session.hpp  my_logger.cpp  my_logger.hpp  my_serialization_session.hpp  my_tcp_session.hpp  my_ws_session.hpp
examples/splice/: CMakeLists.txt
splice/: common_types.hpp  mono_protocol.hpp  mono_protocol.hxx  multi_protocol.hpp  multi_protocol.hxx  protocol.hpp  protocol.hxx  serialization_engine.hpp  serialization_engine.hxx  serialization_session.hpp  serialization_session.hxx  server.hpp  server.hxx  src.cpp  src.hpp  tcp_session.hpp  tcp_session.hxx
splice/detail/: config.hpp  version.h
splice/http/: header.hpp  http_session.hpp  http_session.hxx  mime_types.hpp  mime_types.hxx  reply.hpp  reply.hxx  request.hpp  request_handler.hpp  request_handler.hxx  request_parser.hpp  request_parser.hxx
splice/logger/: boost_log_interface.hpp  log_interface.hpp  splice_boost_log.hpp  ws_session_boost_log.hpp
splice/web_socket/: rfc6455_engine.hpp  ws_handshake.hpp  ws_handshake.hxx  ws_session.hpp  ws_session.hxx
